--- a/HTML+CSS+JS/front002_ex1_click.html
+++ b/HTML+CSS+JS/front002_ex1_click.html
@@ -16,12 +16,30 @@
     <div class="alert alert-warning my-3">
       1. one 버튼을 클릭하면 one 알림창 (alert) 띄우기
       2. two 버튼을 클릭하면 본인이름 알림창 띄우기
-      3. three 버튼을 클릭하면 1, 2, 3 알림칭 3번 띄우기
+      3. three 버튼을 클릭하면 1, 2, 3 알림창 3번 띄우기
       // 이벤트 대상(버튼) - 이벤트(click) - 이벤트핸들러(처리내용 : alert)
     </div>
     <button class="btn btn-danger my-3" onclick="alert('one')">ONE</button>
     <button class="btn btn-warning my-3" onclick="alert('김경미')">TWO</button>
     <button class="btn btn-info my-3" onclick="alert(1); alert(2); alert(3);">THREE</button>
   </div>
+  <!-- BASIC -->
+  <div class="container card my-5">
+    <h3 class="card-header">EX1</h3>
+    <div class="alert alert-danger">
+      two 버튼을 클릭하면 본인이름 알림창 띄우기
+    </div>
+    <button class="btn btn-warning my-3" onclick="alert('tetsu')"> TWO </button>
+    <button class="btn btn-warning my-3" onclick="alert('dog'); alert('cat');"> animal1 </button>
+    <button class="btn btn-warning my-3" id="a"> animal2 </button>
+    <script>
+      // !DOCTYPE  document
+      //                 이벤트대상.이벤트  = 이벤트핸들러(처리)
+      document.getElementById("a").onclick = function () {
+        alert('dog'); alert('cat');
+      };
+    </script>
+  </div>
+  <!-- ex -->
 </body>
 </html>
