202502274_HTML 요소(queryselector)

--- a/HTML+CSS+JS/front002_ex1_click.html
+++ b/HTML+CSS+JS/front002_ex1_click.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -32,11 +32,24 @@
     <button class="btn btn-warning my-3" onclick="alert('tetsu')"> TWO </button>
     <button class="btn btn-warning my-3" onclick="alert('dog'); alert('cat');"> animal1 </button>
     <button class="btn btn-warning my-3" id="a"> animal2 </button>
+    <button class="btn btn-warning my-3" id="b"> animal3 </button>
+    <button class="btn btn-warning my-3 c" > animal4 </button>
     <script>
       // !DOCTYPE  document
       //                 이벤트대상.이벤트  = 이벤트핸들러(처리)
       document.getElementById("a").onclick = function () {
         alert('dog'); alert('cat');
+      };
+      // #b - css 표현법 - 아이디가 b
+      document.querySelector("#b").onclick = () => {
+        document.querySelector("#b").style.background="black";
+        document.querySelector("#b").style.color="white";
+      };
+      // .c - css 표현법 - 클래스가 c
+      // .c 배경 색상을 gold / 글자색상을 blue
+      document.querySelector(".c").onclick = () => {
+        document.querySelector(".c").style.background="skyblue";
+        document.querySelector(".c").style.color="blue";
       };
     </script>
   </div>
