--- a/HTML+CSS+JS/front002_css.html
+++ b/HTML+CSS+JS/front002_css.html
@@ -33,14 +33,17 @@
       연습문제1) 인라인방법을 이용해서 글자색상 gray / 글자사이즈 25px
     </p>
     <p style="color: orange; line-height: 30px;">
-        연습문제2) 인라인방법을 이용해서 글자색상 orange / 행간 30px
+      연습문제2) 인라인방법을 이용해서 글자색상 orange / 행간 30px
     </p>
     <p style="font-family: 'Malgun Gothic', sans-serif;">
-        연습문제3) 인라인방법을 이용해서
-        글꼴 1순위 Malgun Gothic 2순위 sans-serif
+      연습문제3) 인라인방법을 이용해서
+      글꼴 1순위 Malgun Gothic 2순위 sans-serif
     </p>
     <p style="text-align: right; letter-spacing: 5px;">
-        연습문제4) 인라인방법을 이용해서 오른쪽으로 정렬 / 글자간격5px
+      연습문제4) 인라인방법을 이용해서 오른쪽으로 정렬 / 글자간격5px
+    </p>
+    <p style="color: red; letter-spacing: 3px; font-weight: bold; font-style: italic; text-indent: 1em; text-decoration: line-through; text-align: justify;">
+      연습문제5) 인라인방법을 이용해서 글자색상 red / 자간 3px / 굵게 / 기울이기 / 들여쓰기 1em / 취소선 / 글자의 정렬이 왼쪽-오른쪽 선에 딱 맞춰서 정렬되게 만들기 abcdefg abcde  abcdefg abcde  abcdefg abcde  abcdefg abcde  abcdefg abcde abcdefg abcde  abcdefg abcde  abcdefg abcde  abcdefg abcde  abcdefg abcde
     </p>
   </div>
 </body>
